...
                switch response.result {
                case .Success:
                    print("Validation Successful")
                case .Failure(let error):
                    print(error)
                    dispatch_async(dispatch_get_main_queue()) {
                        self.debugTextLabel.text = "Incorrect login credentials"
                    }
                }
        }
    }
}

